fix(apps): make calendar labels more legible (#488)
* fix(apps): make calendar labels more legible

Makes the calendar event labels white in the dark theme and the FG
color in the light theme.

* bump: 5.3.1 > 5.3.2

* Set text color based on label background color.

* Support labels without a background color.

* Support week view.

--- a/gtk/src/light/gtk-3.0/_apps.scss
+++ b/gtk/src/light/gtk-3.0/_apps.scss
@@ -10,7 +10,36 @@ list.tweak-categories separator {
   // make the sidebar look like a normal sidebar
   background: transparent;
 }
-  
+
+/******************
+ * GNOME Calendar *
+ ******************/
+ 
+// Week view event labels with a light background.
+.color-light.vertical > stack > grid > label {
+  color: black;
+}
+
+// Week view event labels with a dark background.
+.color-dark.vertical > stack > grid > label {
+  color: white;
+}
+
+// Month/year view event labels with a light background.
+.color-light.horizontal > stack > grid > label {
+  color: black;
+}
+
+// Month/year view event labels with a dark background.
+.color-dark.horizontal > stack > grid > label {
+  color: white;
+}
+
+// Month/year view event labels with no background.
+.color-light.horizontal.timed > stack > grid > label {
+  color: $fg_color;
+}
+
 /***********
 * Nautilus *
 ***********/
